# chorus-stage

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.migrate  Dockerfile.pytest  Dockerfile.test  Makefile  POW_IMPLEMENTATION_SUMMARY.md  README-Docker.md  README.md  ROADMAP.md  SECURITY.md  alembic.ini  chorus.db  compose.yml  docker-compose.live.yml  docker-compose.test.yml  docker-compose.yml  openapi.json  output.txt  pyproject.toml  test.db  test_hash_algorithm_verification.py  test_pow_direct.py  test_pow_standalone.py  test_register_flow.py  tests.txt
.github/workflows/: ci.yml  tests.yml
art/ascii/: guitar_strings_relief.txt
docs/: API-Reference.md  Architecture-Overview.md  Chorus-Bridge-Conductor-Integration.md  Chorus-Stage-Spec.md  Client-PoW-Implementation-Guide.md  Configuration-Guide.md  Deployment-Guide.md  Development-Setup.md  Documentation-Summary.md  Monitoring-Guide.md  README.md  SHA256-Fallback-Implementation.md  Security-Guide.md  Stage-API-Reference.md  Testing-Guide.md  Troubleshooting-Guide.md  Web-Frontend-PoW-Example.md  moderation.md
docs/api/: auth.md  communities.md  errors.md  messages.md  moderation.md  overview.md  posts.md  system.md  users.md  votes.md
docs/architecture/: pow.md
examples/: pow_demo.py
migrations/: env.py
migrations/versions/: 0473dd218910_anon_key_refactor.py  1dea22efcffb_remove_timestamps.py  268edf5d8afe_wire_core_indices.py  4b819fc59ba9_safety_regeneration_after_cleanup.py  7ff6d5cbf5b0_.py  864e3cf18953_add_federation_outbound_table.py  a307527a5474_initial_schema.py  ba08dc125622_.py  cb8f10382037_init_schemas.py
monitoring/: prometheus.yml
src/chorus_stage/: __init__.py  database.py  init_db.py  main.py
src/chorus_stage/api/: __init__.py  users.py
src/chorus_stage/api/v1/: __init__.py  dependencies.py  router.py  routes_feed.py  routes_moderation.py  routes_posts.py  routes_pow.py
src/chorus_stage/api/v1/endpoints/: __init__.py  auth.py  communities.py  messages.py  moderation.py  posts.py  system.py  users.py  votes.py
src/chorus_stage/core/: __init__.py  config.py  pow.py  security.py  settings.py
src/chorus_stage/db/: __init__.py  session.py  time.py
src/chorus_stage/models/: __init__.py  community.py  db_models.py  direct_message.py  federation_outbound.py  message.py  moderation.py  post.py  rate.py  replay_protection.py  system.py  system_clock.py  user.py  vote.py
src/chorus_stage/proto/: federation_pb2.py  federation_pb2_stub.py
src/chorus_stage/repositories/: __init__.py  post_repo.py
src/chorus_stage/schemas/: __init__.py  common.py  community.py  direct_message.py  moderation.py  post.py  pow.py  user.py  users.py  vote.py
src/chorus_stage/scripts/: alpha_check.py  ensure_db.py  migrate.py  test_checkpoint_alpha.py  tokens.py
src/chorus_stage/services/: __init__.py  bridge.py  bridge_sync.py  crypto.py  e2e_messages.py  moderation.py  order_index.py  post_service.py  pow.py  pow_service.py  replay.py  signing.py  user_service.py
src/chorus_stage/utils/: hash.py  pow_client.py
tests/: __init__.py  conftest.py  test_db_models.py  test_feed_rising.py  test_health.py  test_moderation.py  test_posts.py  test_pow.py  test_signature.py  test_smoke.py
tests/services/: test_bridge_sync.py  test_federation_outbound.py
tests/v1/: __init__.py  test_auth.py  test_auth_helpers.py  test_bridge_auth.py  test_bridge_communities.py  test_bridge_messages.py  test_bridge_moderation.py  test_bridge_posts.py  test_communities.py  test_dependencies.py  test_hash_utils.py  test_integration.py  test_jwt_validation.py  test_messages.py  test_moderation.py  test_posts.py  test_posts_helpers.py  test_pow.py  test_pow_api_integration.py  test_pow_client_utils.py  test_pow_dual_algorithm.py  test_pow_sha256_fallback.py  test_profile_update.py  test_services.py  test_simple_utils.py  test_system.py  test_users.py  test_votes.py
