[tool.poetry]
name = "chorus-stage"
version = "0.1.0"
description = "Chorus Network backend (FastAPI + Postgres + Redis) with documented stubs."
authors = ["Hailey Welsh github@haileywelsh.me"]
readme = "README.md"
packages = [{ include = "chorus_stage", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
redis = "^5.0.8"
typing-extensions = "^4.12.2"
PyNaCl = "^1.5.0"
python-multipart = "^0.0.9"
psycopg = {extras = ["binary", "pool", "async"], version = "^3.2"}
requests = "^2.32.5"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
blake3 = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.2"
pytest-asyncio = "^0.23.5"
ruff = "^0.6.9"
mypy = "^1.11.2"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "F", "E", "W", "UP", "B", "SIM", "PL"]
ignore = ["E203"]  # keep black-compatible slicing if you ever switch

[tool.ruff.lint.isort]
known-first-party = ["chorus_stage"]

[tool.mypy]
python_version = "3.14"
plugins = []
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
exclude = ["migrations/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
